Se creó con Colab

--- a/Proyecto_18_de_nov_25.ipynb
+++ b/Proyecto_18_de_nov_25.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXRas+/bEkaspjmRtDPkaU",
+      "authorship_tag": "ABX9TyPm0hO/zfvKE2gueoT+gMrg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,7 @@
         "id": "wKs_SoZcFve8",
         "outputId": "82d637dd-8a29-444e-db50-9fc255d929c0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,6 +204,65 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ¿Qué columna tenía el mayor número de valores nulos y qué estrategia de limpieza usé?"
+      ],
+      "metadata": {
+        "id": "9qMJb9y3fhjQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "La columna que tenía más valores nulos se detectó automáticamente.\n",
+        "La limpieza que usé fue *fillna()*, porque era la mejor forma de completar los datos sin borrar información.\n",
+        "Si era numérica, se rellenó con la media. Si era texto, con “Desconocido”.\n"
+      ],
+      "metadata": {
+        "id": "BAd2Xn-ift2E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ¿Qué fue lo más sorprendente o inesperado que encontré?"
+      ],
+      "metadata": {
+        "id": "bIwpkHCwf87b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Me sorprendió que casi todas las columnas tenían *0 valores nulos*, así que el dataset estaba bastante completo.\n",
+        "También fue interesante ver cuántos campeones quedaron como “alto valor”.\n"
+      ],
+      "metadata": {
+        "id": "MIaMjYWFgFav"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ¿Qué historia cuentan mis datos? (2–3 frases)"
+      ],
+      "metadata": {
+        "id": "_vNRYrIEgLtF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El dataset muestra que algunos campeones tienen valores más altos que el promedio.\n",
+        "También se nota que los datos están limpios y fáciles de analizar.\n",
+        "En general, permite comparar qué campeones destacan más que otros."
+      ],
+      "metadata": {
+        "id": "aXamk_AvgTOX"
+      }
     }
   ]
 }
