Se creó con Colab

--- a/musica.ipynb
+++ b/musica.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/VexeCARzLeYCViokh1Bo",
+      "authorship_tag": "ABX9TyNGTqVDylisuA6C5j5FvL7t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SVgmkiCibHw9",
-        "outputId": "ddb165fa-787b-49b7-f8ec-9f9dcb0fd309"
+        "outputId": "a6caa332-d9b3-4f30-af76-b5233918180b"
       },
       "outputs": [
         {
@@ -75,8 +75,7 @@
             "1         2025-10-31                   1     single                3.07  \n",
             "2         2025-10-31                   1     single                2.55  \n",
             "3         2025-10-31                   9      album                1.69  \n",
-            "4         2025-10-30                   2     single                2.39   \n",
-            "\n",
+            "4         2025-10-30                   2     single                2.39  \n",
             "TAIL:\n",
             "                    track_id          track_name  track_number  \\\n",
             "8577  0AQquaENerGps8BQmbPw14            Big Iron             1   \n",
@@ -111,11 +110,9 @@
             "8578         1959-06-30                  15        album                4.32  \n",
             "8579         1959-02-11                   9  compilation                2.28  \n",
             "8580         1958-01-01                  12        album                2.74  \n",
-            "8581         1952-09-12                  12        album                2.02   \n",
-            "\n",
+            "8581         1952-09-12                  12        album                2.02  \n",
             "SHAPE:\n",
-            "(8582, 15) \n",
-            "\n",
+            "(8582, 15)\n",
             "INFO:\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 8582 entries, 0 to 8581\n",
@@ -139,8 +136,7 @@
             " 14  track_duration_min  8582 non-null   float64\n",
             "dtypes: bool(1), float64(1), int64(5), object(8)\n",
             "memory usage: 947.2+ KB\n",
-            "None \n",
-            "\n",
+            "None\n",
             "DESCRIBE:\n",
             "       track_number  track_popularity  artist_popularity  artist_followers  \\\n",
             "count   8582.000000       8582.000000        8582.000000      8.582000e+03   \n",
@@ -160,8 +156,7 @@
             "25%              6.000000            2.880000  \n",
             "50%             13.000000            3.445000  \n",
             "75%             17.000000            3.990000  \n",
-            "max            181.000000           13.510000   \n",
-            "\n"
+            "max            181.000000           13.510000  \n"
           ]
         }
       ],
@@ -172,19 +167,19 @@
         "df = pd.read_csv('/content/spotify_data clean.csv')\n",
         "\n",
         "print(\"HEAD:\")\n",
-        "print(df.head(), \"\\n\")\n",
+        "print(df.head(), )\n",
         "\n",
         "print(\"TAIL:\")\n",
-        "print(df.tail(), \"\\n\")\n",
+        "print(df.tail(), )\n",
         "\n",
         "print(\"SHAPE:\")\n",
-        "print(df.shape, \"\\n\")\n",
+        "print(df.shape, )\n",
         "\n",
         "print(\"INFO:\")\n",
-        "print(df.info(), \"\\n\")\n",
+        "print(df.info(), )\n",
         "\n",
         "print(\"DESCRIBE:\")\n",
-        "print(df.describe(), \"\\n\")\n"
+        "print(df.describe(), )\n"
       ]
     },
     {
